doc/grammar/spec_file_grammar.txt
PARAM: let param PARAM_LIST
SIGNAL: let signal SIGNAL_LIST
PROBSIGNAL: let probabilistic signal PROBSIGNAL_LIST

PARAM_LIST: ID_LIST;
SIGNAL_LIST: ID_LIST;
PROBSIGNAL_LIST: ID_LIST;

ID_LIST: ID |
		ID, ID_LIST

INTVL: LBRACKET NUMBER COMMA NUMBER RBRACKET		
INTVL_LIST: ID in INTVL |
		ID in INTVL, INTVL_LIST

PROP: ID := PHI | PSI

SIG: ID | CONSTANT_SIGNAL
CONSTANT_SIGNAL: NUMBER

FUNC: SIG BIN_COND SIG | SIG BIN_OP SIG
PHI : ID | FUNC | NOT PHI | PROB PHI | PHI BIN_BOOL_OP PHI | F[INTVL]? PHI | G[INTVL]? PHI | PHI U[INTVL]? PHI | ON[INTVL] PSI | LPAR PHI RPAR
PSI : MIN PHI | MAX PHI | INTEGRAL PHI | DER PHI

EVAL: eval ID on EVAL_PARAM_LIST
EVAL_PARAM_LIST : ID IN INTVL
            | ID IN INTVL COMMA EVAL_PARAM_LIST

SPEC_FILE: 
	[DEF_SIGNAL | DEF_PROBSIGNAL]? 
	[DEF_PARAM]?
	[PROP]+ 
	[EVAL]+

? = 0, 1
+ = 1...N
* = 0...N
